--- a/src/Components/stopwatch.html
+++ b/src/Components/stopwatch.html
@@ -16,7 +16,7 @@
       <header class="w-full h-14 backdrop-blur-3xl bg-opacity-15 bg-slate-100">
         <nav class="w-full h-full flex justify-between text-white">
           <div class="navleft p-3">
-            <p class="hover:cursor-pointer text-2xl">ClockWorks</p>
+            <p class="hover:cursor-pointer text-2xl"><a href="/src/index.html">ClockWorks</a></p>
           </div>
           <div class="navRight flex p-3">
             <ul class="flex gap-8 justify-between">
@@ -63,5 +63,5 @@
   <script>
     lucide.createIcons();
     </script>
-    <script src="/src/Components/stopwatch.js"></script>
+    <script src="/src/Components/Stopwatch.js"></script>
 </html>
